# iCurve

./: README.md
DebugApp/convex/: Cargo.toml
DebugApp/hull_intersection/: Cargo.toml
DebugApp/hull_intersection/src/: main.rs
DebugApp/segment_cross/: Cargo.toml
DebugApp/segment_cross/test/: test_0.json  test_1.json  test_2.json  test_3.json  test_4.json  test_5.json
DebugApp/segment_intersection/: Cargo.toml
DebugApp/spline_overlay/: Cargo.toml
DebugApp/split/: Cargo.toml
iCurve/: Cargo.toml
iCurve/src/: lib.rs
iCurve/src/data/: bitset.rs  four_vec.rs  link_list.rs  mod.rs
iCurve/src/eframe/: mod.rs  point.rs
iCurve/src/float/math/: mod.rs  offset.rs  point.rs
iCurve/src/int/: mod.rs
iCurve/src/int/base/: mod.rs  spline.rs
iCurve/src/int/bezier/: anchor.rs  convex_hull.rs  curve.rs  length.rs  mod.rs  path.rs  point.rs  position.rs  short.rs  spline.rs  spline_cube.rs  spline_cubic.rs  spline_line.rs  spline_square.rs  split.rs
iCurve/src/int/circle/: arc.rs
iCurve/src/int/collision/: approximation.rs  collider.rs  colliding.rs  convex.rs  convex_hull.rs  convexity.rs  fit.rs  four_convex.rs  four_convex_path.rs  mod.rs  pair.rs  size.rs  solver.rs  space.rs  spline.rs  split.rs  x_segment.rs
iCurve/src/int/collision/solver/: cross.rs  mod.rs  x_segment.rs
iCurve/src/int/convex/: builder.rs  hull.rs  mod.rs
iCurve/src/int/math/: ab_segment.rs  mod.rs  normalize.rs  offset.rs  point.rs  range.rs  rect.rs  segment.rs  triangle.rs  x_segment.rs
iCurve/src/int/util/: closest_point.rs  mod.rs
iCurve/src/quant/: space.rs
(+28 files in other folders)
