[package]
name = "i_curve"
version = "0.1.0"
edition = "2024"

[dependencies]

serde = { version = "^1.0", default-features = false, features = ["derive"], optional = true }
rand = "0.9.0"
libm = { version = "0.2.15", default-features = false }

[dev-dependencies]
rand = { version = "~0.9", features = ["alloc"] }